--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   />
   <span class="title">Welcome</span>
 
-  <app-select></app-select>
+  <app-currency-rate></app-currency-rate>
 
   <div class="spacer"></div>
   <a
@@ -72,6 +72,4 @@
   <ng-template #noCards>
     <p>Cards are hidden</p>
   </ng-template>
-
-  <app-form></app-form>
 </main>
